# pdm_fastapi_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py  settings.py
src/models/: message.py  test_message.py
src/routes/: root.py  test_root.py
